--- a/17.html
+++ b/17.html
@@ -58,7 +58,7 @@
 
     .item6 {
     top: 270px;
-    left: 310px;
+    left: 320px;
     }
 
     .item7 {
@@ -187,15 +187,15 @@
       }
     }
 
+    var answer = [0,0,0,0,0,0,0,0,0,0,]
     function clickQuestion(i) {
-      if(answer >= correctAnswer)
-        return
       
       $('#box' + i).removeClass('hide')
-      answer++
+      answer[i] = 1
 
-      if(answer == correctAnswer)
-          $('#right_div').fadeIn();
+      if(answer[1] + answer[2] + answer[3] + answer[4] + answer[5] + answer[6] + answer[7] >= 7){
+          $('#right_div').fadeIn(); 
+      }
     }
 
     function confirm() {
