--- a/17.html
+++ b/17.html
@@ -32,8 +32,10 @@
     }
 
     .item1 {
-    top: 80px;
-    left: 180px;
+      top: 80px;
+      left: 180px;
+      width: 80px;
+      height: 50px;
     }
 
     .item2 {
@@ -42,28 +44,38 @@
     }
 
     .item3 {
-    top: 250px;
-    left: 550px;
+      top: 250px;
+    left: 530px;
+    width: 150px;
+    height: 40px;
     }
 
     .item4 {
-    top: 200px;
-    left: 100px;
+      top: 200px;
+    left: 90px;
+    width: 150px;
+    height: 60px;
     }
 
     .item5 {
-    top: 290px;
-    left: 130px;
+      top: 300px;
+    left: 80px;
+    width: 200px;
+    height: 30px;
     }
 
     .item6 {
-    top: 270px;
-    left: 320px;
+      top: 230px;
+    left: 340px;
+    height: 80px;
+    width: 20px;
     }
 
     .item7 {
-    top: 210px;
-    left: 355px;
+      top: 210px;
+    left: 375px;
+    height: 100px;
+    width: 40px;
     }
 
     .item8 {
@@ -74,16 +86,26 @@
       left: 0px;
     }
 
-    .item-box .box{
-    height: 20px;
-    width: 20px;
-    margin-top: 15px;
-    margin-left: 15px;
-    background-color: white;
-    border-radius: 10px;
-    border: 4px solid #444444;
-    box-sizing: border-box;
+    .box{
+      height: 20px;
+      width: 20px;
+      margin-top: 15px;
+      margin-left: 15px;
+      background-color: white;
+      border-radius: 10px;
+      border: 4px solid #444444;
+      box-sizing: border-box;
+      position: absolute;
     }
+
+    .box1{left: 170px;top: 80px;}
+    .box11{left: 370px;top: 90px;}
+    .box2{left: 580px;top: 110px;}
+    .box3{top: 250px;left: 550px;}
+    .box4{top: 200px;left: 100px;}
+    .box5{top: 290px;left: 130px;}
+    .box6{top: 260px;left: 325px;}
+    .box7{top: 220px;left: 365px;}
 
     .item .active {
       border: 1px solid white;
@@ -129,13 +151,23 @@
     </div>
 
     <div class="item">
-      <div class="item-box item1 " onclick="clickQuestion(1)"><div class="box animated infinite pulse hide" id="box1"></div></div>
-      <div class="item-box item2 " onclick="clickQuestion(2)"><div class="box animated infinite pulse hide" id="box2"></div></div>
-      <div class="item-box item3 " onclick="clickQuestion(3)"><div class="box animated infinite pulse hide" id="box3"></div></div>
-      <div class="item-box item4 " onclick="clickQuestion(4)"><div class="box animated infinite pulse hide" id="box4"></div></div>
-      <div class="item-box item5 " onclick="clickQuestion(5)"><div class="box animated infinite pulse hide" id="box5"></div></div>
-      <div class="item-box item6 " onclick="clickQuestion(6)"><div class="box animated infinite pulse hide" id="box6"></div></div>
-      <div class="item-box item7 " onclick="clickQuestion(7)"><div class="box animated infinite pulse hide" id="box7"></div></div>
+      <div class="item-box item1 " onclick="clickQuestion(1)"></div>
+      <div class="item-box item1 box11 " onclick="clickQuestion(1)"></div>
+      <div class="item-box item2 " onclick="clickQuestion(2)"></div>
+      <div class="item-box item3 " onclick="clickQuestion(3)"></div>
+      <div class="item-box item4 " onclick="clickQuestion(4)"></div>
+      <div class="item-box item5 " onclick="clickQuestion(5)"></div>
+      <div class="item-box item6 " onclick="clickQuestion(6)"></div>
+      <div class="item-box item7 " onclick="clickQuestion(7)"></div>
+
+      <div class="box box1 animated infinite pulse hide"></div>
+      <div class="box box1 box11 animated infinite pulse hide"></div>
+      <div class="box box2 animated infinite pulse hide"></div>
+      <div class="box box3 animated infinite pulse hide"></div>
+      <div class="box box4 animated infinite pulse hide"></div>
+      <div class="box box5 animated infinite pulse hide"></div>
+      <div class="box box6 animated infinite pulse hide"></div>
+      <div class="box box7 animated infinite pulse hide"></div>
     </div>
 
   </div>
@@ -190,7 +222,7 @@
     var answer = [0,0,0,0,0,0,0,0,0,0,]
     function clickQuestion(i) {
       
-      $('#box' + i).removeClass('hide')
+      $('.box' + i).removeClass('hide')
       answer[i] = 1
 
       if(answer[1] + answer[2] + answer[3] + answer[4] + answer[5] + answer[6] + answer[7] >= 7){
